# util_automated_driving_msgs

./: .gitignore  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml
include/util_automated_driving_msgs/: util_automated_driving_msgs.hpp
src/: util_automated_driving_msgs.cpp
test/: test_util_automated_driving_msgs_checks.cpp  test_util_automated_driving_msgs_computations.cpp  test_util_automated_driving_msgs_conversions.cpp
